@@ -3,6 +3,7 @@ codebird-php - changelog
 
 2.4.1 (not yet released)
 + #26 Stringify null and boolean parameters
++ Validate Twitter SSL certificate for oauth2/token method
 
 2.4.0 (2013-06-15)
 + Add contributing guidelines
